Refactored index.html

--- a/index.html
+++ b/index.html
@@ -72,36 +72,42 @@
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-copyright"></i>
                         <div class="text">Web Development</div>
                         <p>Website Design and Development, Website Optimazation, E-commerce Deveelopment, Content Managenment System, Responsive Design .</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-chart-line"></i>
                         <div class="text">Application Design</div>
                         <p>User Experience Design, User Interfcace Design, Responsive Design, Design System, Prototyping and Testing, System Architecture Design.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-mobile"></i>
                         <div class="text">Mobile Application Deveelopment</div>
                         <p>Mobile Application Design and Development, Cross-Platform Development, E-commerce Mobile Applications, API Deveelopment And Integration, Mobile App Testing .</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-mobile"></i>
                         <div class="text">Software Engineering</div>
                         <p>Backend Deveelopment, Software Testing, Software Maintainance and support, Software Design and Deveelopment, Git For Version Control, API Documentation.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-chart-line"></i>
                         <div class="text">Design Thinking System</div>
                         <p>Problem Framing, Empathy and User Research, Design Thinking,  Ideation and Prototyping, User Testing and Feedback, Iterative Design,.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
+                        <i class="fas fa-paint-brush"></i>
                         <div class="text">Industrial Design</div>
                         <p>Design Research, Sketching and Ideation, User Testing and Feedback, Brand Identity and Packaging Design, Concept Ideation..</p>
                     </div>
