Added asset image

--- a/index.html
+++ b/index.html
@@ -183,41 +183,41 @@
     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title"><b>My Friends</b></h2>
+            <h2 class="title"><b>My Works</b></h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/tife.jpeg" alt="">
-                        <div class="text">Olanipekun 'Tife</div>
-                        <p>Product Designer.</p>
+                        <img src="images/asap.png" alt="">
+                        <div class="text">Chat App With Flutter</div>
+                        <a class="code" href="https://github.com/Momentwithace/Asap">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/odugwo.jpeg" alt="">
-                        <div class="text">Obeliagu odinaka</div>
-                        <p>Frontend Developer.</p>
+                        <img src="images/e-learing.png" alt="">
+                        <div class="text">E-Learning App UI Flutter</div>
+                        <a class="code" href="https://github.com/Momentwithace/e_learning_app_UI">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/dee2.jpeg" alt="">
-                        <div class="text">Abang Dorcas</div>
-                        <p>Backend Developer.</p>
+                        <img src="images/todo-app.png" alt="">
+                        <div class="text">Todo App Flutter</div>
+                        <a class="code" href="https://github.com/Momentwithace/TODO_APP">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/inter.jpeg" alt="">
-                        <div class="text">Ernest Ehigiator</div>
-                        <p>Backend Engineer.</p>
+                        <div class="text">Task Manager App UI Flutter</div>
+                        <a class="code" href="https://github.com/Momentwithace/Task-Manger-UI-with-flutter-Getx-">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/ace.jpeg" alt="">
-                        <div class="text">Augustine Ezekiel</div>
-                        <p>Mobile Application Developer.</p>
+                        <img src="images/asap.png" alt="">
+                        <div class="text">Chat App UI</div>
+                        <a class="code" href="https://github.com/Momentwithace/Chat-App-UI---Flutter">View Code</a>
                     </div>
                 </div>
             </div>
