Added asset image

--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/inter.jpeg" alt="">
-                        <div class="text">Task Manager App UI Flutter</div>
+                        <img src="images/taskmanager.jpeg" alt="">
+                        <div class="text">Task Manager App UI</div>
                         <a class="code" href="https://github.com/Momentwithace/Task-Manger-UI-with-flutter-Getx-">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/asap.png" alt="">
+                        <img src="images/chatapp-ui.png" alt="">
                         <div class="text">Chat App UI</div>
                         <a class="code" href="https://github.com/Momentwithace/Chat-App-UI---Flutter">View Code</a>
                     </div>
