Added asset image

--- a/index.html
+++ b/index.html
@@ -124,11 +124,12 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My Experience</div>
-                    <p>Proramming Languages - Java, Python, Dart, JavaScript</p>
-                    <p>Programming Frame Work/Librraries - SpringBoot, Django, Flutter, React</p>
+                    <p>Programming Languages - Java, Python, Dart, JavaScript</p>
+                    <p>Programming Frame Work/Libraries - SpringBoot, Django, Flutter, React</p>
                     <p>Programming Tools - Git, GitHub, Maven, Junit, Postman, Jira, Confluence</p>
+                    <br>
                     <div class="text">My Creative Skills</div>
-                    <p>Creative Problem Solving, Innovative Thinking, Collaboration, Attention to Details, Adaptability, Creativity, User Experience Design, Agile Developer(Scrum), Strong Communication Skills, Continous learning, User Centered Design, Prototyping and Testing.</p>
+                    <p>Creative Problem-Solving, Innovative Thinking, Collaboration, Attention to Details, Adaptability, Creativity, User Experience Design, Agile Developer(Scrum), Strong Communication Skills, Continous learning, User Centered Design, Prototyping and Testing.</p>
         
             
                 </div>
