Added asset image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <!-- <div class="logo"><a href="#">Portfo<span>lio.</span></a></div> -->
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -74,28 +73,28 @@
                     <div class="box">
                         <i class="fas fa-copyright"></i>
                         <div class="text">Web Development</div>
-                        <p>Website Design and Development, Website Optimazation, E-commerce Deveelopment, Content Managenment System, Responsive Design .</p>
+                        <p>Website Design and Development, Website Optimization, E-commerce Development, Content Management System, Responsive Design .</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Application Design</div>
-                        <p>User Experience Design, User Interfcace Design, Responsive Design, Design System, Prototyping and Testing, System Architecture Design.</p>
+                        <p>User Experience Design, User Interface Design, Responsive Design, Design System, Prototyping and Testing, System Architecture Design.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-mobile"></i>
-                        <div class="text">Mobile Application Deveelopment</div>
-                        <p>Mobile Application Design and Development, Cross-Platform Development, E-commerce Mobile Applications, API Deveelopment And Integration, Mobile App Testing .</p>
+                        <div class="text">Mobile Application Development</div>
+                        <p>Mobile Application Design and Development, Cross-Platform Development, E-commerce Mobile Applications, API Development And Integration, Mobile App Testing .</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-mobile"></i>
                         <div class="text">Software Engineering</div>
-                        <p>Backend Deveelopment, Software Testing, Software Maintainance and support, Software Design and Deveelopment, Git For Version Control, API Documentation.</p>
+                        <p>Backend Development, Software Testing, Software Maintenance and support, Software Design and Development, Git For Version Control, API Documentation.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -114,7 +113,6 @@
                 </div>
                </div>
             </div>
-        </div>
     </section>
 
     <!-- skills section start -->
@@ -129,7 +127,7 @@
                     <p>Programming Tools - Git, GitHub, Maven, Junit, Postman, Jira, Confluence</p>
                     <br>
                     <div class="text">My Creative Skills</div>
-                    <p>Creative Problem-Solving, Innovative Thinking, Collaboration, Attention to Details, Adaptability, Creativity, User Experience Design, Agile Developer(Scrum), Strong Communication Skills, Continous learning, User Centered Design, Prototyping and Testing.</p>
+                    <p>Creative Problem-Solving, Innovative Thinking, Collaboration, Attention to Details, Adaptability, Creativity, User Experience Design, Agile Developer(Scrum), Strong Communication Skills, Continuous learning, User Centered Design, Prototyping and Testing.</p>
         
             
                 </div>
@@ -195,7 +193,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/e-learing.png" alt="">
+                        <img src="images/e-learning.png" alt="">
                         <div class="text">E-Learning App UI Flutter</div>
                         <a class="code" href="https://github.com/Momentwithace/e_learning_app_UI">View Code</a>
                     </div>
@@ -209,14 +207,14 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/taskmanager.jpeg" alt="">
+                        <img src="images/task-manager.jpeg" alt="">
                         <div class="text">Task Manager App UI</div>
                         <a class="code" href="https://github.com/Momentwithace/Task-Manger-UI-with-flutter-Getx-">View Code</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/chatapp-ui.png" alt="">
+                        <img src="images/chat-app-ui.png" alt="">
                         <div class="text">Chat App UI</div>
                         <a class="code" href="https://github.com/Momentwithace/Chat-App-UI---Flutter">View Code</a>
                     </div>
@@ -232,7 +230,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text"><h3>Get in Touch</h3></div>
-                    <p>I am always looking for new Challenges and Opportunity to Collaborate with other in the tech industry, whether you're interested in my current work or have a new project in mind, i will be excited to hear from you.</p>
+                    <p>I am always looking for new Challenges and Opportunity to Collaborate with other in the tech industry, whether you're interested in my current work or have a new project in mind, I will be excited to hear from you.</p>
                     <p>If you have any question or would like to discuss any potential opportunities further, please don't hesitate to get in touch.</p>
                     <div class="icons">
                         <div class="row">
@@ -246,7 +244,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">312, Albert Maculay, Yaba Lagos</div>
+                                <div class="sub-title">312, Albert Macaulay, Yaba Lagos</div>
                             </div>
                         </div>
                         <div class="row">
@@ -260,23 +258,23 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#", onsubmit="sendEmail(), reset(); return false">
+                    <form action="#" onsubmit="sendEmail(), reset(); return false">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" id="name" placeholder="Name" required>
+                                <label for="name"></label><input type="text" id="name" placeholder="Name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" id="email" placeholder="Email" required>
+                                <label for="email"></label><input type="email" id="email" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" id="phone" placeholder="Phone Number" required>
+                            <label for="phone"></label><input type="text" id="phone" placeholder="Phone Number" required>
                         </div>
                         <div class="field">
-                            <input type="text" id="subject" placeholder="Subject" required>
+                            <label for="subject"></label><input type="text" id="subject" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" id="message" placeholder="Message.." required></textarea>
+                            <label for="message"></label><textarea cols="30" rows="10" id="message" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
                             <button type="submit">Send message</button>
@@ -318,12 +316,12 @@
     <div class="media-page">
       <ul class="nav footer-nav">
         <li>
-          <a href="http://github.com" target="_blank">
+          <a href="https://github.com" target="_blank">
             <img src="/images/github-logo.png" alt="github-logo" />
           </a>
         </li>
         <li>
-          <a href="http://twitter.com" target="_blank">
+          <a href="https://twitter.com" target="_blank">
             <img src="/images/twitter.png" alt="Twitter-logo" />
           </a>
         </li>
